# real-estate-crawler

./: .gitignore  BLOCKERS.md  README.md  crawler.py  crawler_settings.py  pyproject.toml  requirements-dev.txt  requirements-spark.txt  requirements.txt
Test/: ARCHITECTURE.md  COLAB_GUIDE.md  crawler.py  crawler_config.json  crawler_extractors.py  crawler_runner.py  crawler_settings.py  crawler_storage.py
configs/: crawl_targets.yaml  crawl_targets_scale.yaml  validation_thresholds.yaml
dags/: daily_real_estate_pipeline.py
dashboard/: __init__.py  app.py  data_loaders.py  formatters.py
docs/: PROJECT_REPORT_OUTLINE.md  bigdata_real_estate_lakehouse_phases.md  etl_dwh_readiness_assessment.md  function.md  project_overview.md  setup_fedora.md  silver_layer_improvements.md
output/: listings_crawl4ai.csv
scripts/: audit_bronze.py  backfill_crawl_location_audit.py  preflight_pipeline.ps1  preflight_pipeline.sh  run_daily_pipeline.ps1  run_daily_pipeline.sh  run_local_gold_validation.ps1  run_phase5_pipeline_linux.sh  run_phase5_pipeline_windows.ps1  test_crawl_alonhadat.py  test_crawl_nhatot.py  test_nhatot_10_listings.py  test_nhatot_api.py  test_nhatot_api_crawl.py  test_nhatot_rate_limit.py
src/: bronze_to_silver.py  crawl.py  crawl_audit.py  parser.py  silver_to_gold.py  url_builder.py  utils.py
tests/: test_batdongsan_adapter.py  test_block_detector.py  test_bronze_writer.py  test_crawl_audit.py  test_detail_page_parser.py  test_feature_extractors.py  test_feature_integration.py  test_feature_orchestrator.py  test_feature_text_utils.py  test_fetcher.py  (+16 more)
(+169 files in other folders)
